Subindo alterações com hook e fakers

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^15.0.0"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.9.0"
   }
 }
